# framebuffer

./: .gitignore  README.md  pyproject.toml
examples/: cube_and_plane.py  io_utils.py  spinning_cube.py
src/framebuffer/: __init__.py  __main__.py
src/framebuffer/linalg/: __init__.py  linalg.py  matrix.py  matrix3x3.py  matrix4x4.py  utils.py  vector.py  vector2.py  vector3.py  vector4.py
src/framebuffer/pipeline/data/: __init__.py  fragment.py  shader_context.py  texture.py  triangle.py  vertex.py
src/framebuffer/pipeline/shaders/: __init__.py  fragment.py  shader_utils.py  utils.py  vertex.py  vertex_shader.py
src/framebuffer/pipeline/stages/: __init__.py  assembly.py  clipping.py  rasterization.py  viewport.py
src/framebuffer/rendering/: __init__.py  backend.py  frame.py  renderer.py
src/framebuffer/ui/: progress_bar.py
tests/linalg/: test_matrix.py  test_vector.py
